# ai-agent-orders

./: pyproject.toml  react.py  run.py  run_history.py  tools.py
backend/: api.py
docs/: pedidos_argentina.txt  pedidos_brasil.txt
faiss_index/: index.faiss  index.pkl
faiss_index_ar/: index.faiss  index.pkl
services/: Intranet_repository.py  Intranet_repository_ar.py
