[project]
name = "ai-agent-orders"
version = "0.1.0"
description = ""
authors = [
    {name = "Allan"}
]
# readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "python-dotenv>=1.0.1,<2.0.0",
    "black>=24.10.0,<25.0.0",
    "isort>=5.13.2,<6.0.0",
    "langchain>=0.3.14,<0.4.0",
    "langchain-openai>=0.3.0,<0.4.0",
    "langgraph>=0.2.62,<0.3.0",
    "grandalf>=0.8,<0.9",
    "streamlit>=1.41.1,<2.0.0",
    "chromadb>=0.6.2,<0.7.0",
    "sentence-transformers>=3.3.1,<4.0.0",
    "langchain-community>=0.3.14,<0.4.0",
    "fastapi>=0.115.7,<0.116.0",
    "uvicorn>=0.34.0,<0.35.0",
    "faiss-cpu>=1.9.0,<2.0.0",
    "langchain-core>=0.3.40,<0.4.0",
    "awscli>=1.38.3,<2.0.0",
    "boto3>=1.37.3,<2.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"